--- a/langchain/requirements.txt
+++ b/langchain/requirements.txt
@@ -26,3 +26,7 @@ pydantic==2.11.7
 SQLAlchemy==2.0.43
 requests==2.32.4
 aiohttp==3.12.15
+wikipedia==1.4.0
+
+# OpenAPI support for LangChain
+openapi-schema-pydantic==1.2.4
