--- a/langchain/requirements.txt
+++ b/langchain/requirements.txt
@@ -30,3 +30,6 @@ wikipedia==1.4.0
 
 # OpenAPI support for LangChain
 openapi-schema-pydantic==1.2.4
+
+# OpenAPI support for LangChain
+openapi-schema-pydantic==1.2.4
